--- a/index.html
+++ b/index.html
@@ -21,61 +21,28 @@
   </div>
 
   <!-- Free Predictions -->
-  <div id="free" class="tab-content active">
-    <p class="subheader">Yesterday’s Record: ✅ 4 Wins | ❌ 1 Loss</p>
-
-    <div class="prediction">
-      <h3>1. Liverpool vs Arsenal</h3>
-      <p>🎯 Prediction: Draw (78%) → ✅ CORRECT</p>
-      <p>💡 Recommended Bet: BTTS</p>
-    </div>
-
-    <div class="prediction">
-      <h3>2. Real Madrid vs Barcelona</h3>
-      <p>🎯 Prediction: Home Win (85%) → ✅ CORRECT</p>
-      <p>💡 Recommended Bet: Over 2.5</p>
-    </div>
-
-    <div class="prediction">
-      <h3>3. Bayern Munich vs Dortmund</h3>
-      <p>🎯 Prediction: Home Win (82%) → ✅ CORRECT</p>
-      <p>💡 Recommended Bet: -1 Handicap</p>
-    </div>
-
-    <div class="prediction">
-      <h3>4. PSG vs Marseille</h3>
-      <p>🎯 Prediction: Home Win (79%) → ❌ WRONG</p>
-      <p>💡 Recommended Bet: Over 3.5</p>
-    </div>
-
-    <div class="prediction">
-      <h3>5. Juventus vs AC Milan</h3>
-      <p>🎯 Prediction: Away Win (75%) → ✅ CORRECT</p>
-      <p>💡 Recommended Bet: Double Chance</p>
-    </div>
+<div id="free" class="tab-content active">
+  <div class="record-badge">
+    Yesterday: <span class="win">✅ 4 Wins</span> | <span class="loss">❌ 1 Loss</span>
   </div>
 
-  <!-- Premium Predictions -->
-  <div id="premium" class="tab-content">
-    <p class="subheader">Yesterday’s Premium Record: ✅ 3 Wins | ❌ 0 Loss</p>
+  <div class="section-header">Today’s Free Predictions</div>
 
-    <div class="prediction locked">
-      <h3>🔒 Premium Pick 1</h3>
-      <p>Subscribe to unlock elite AI predictions.</p>
-      <p>💰 EV Score: +15.2%</p>
-    </div>
+  <!-- AUTO-INSERTED FREE MATCHES WILL APPEAR HERE -->
+</div>
+<!-- Free Predictions End -->
+  
+<!-- Premium Predictions -->
+<div id="premium" class="tab-content">
+  <div class="record-badge">
+    Yesterday: <span class="win">✅ 3 Wins</span> | <span class="loss">❌ 0 Loss</span>
+  </div>
 
-    <div class="prediction locked">
-      <h3>🔒 Premium Pick 2</h3>
-      <p>Subscribe to unlock elite AI predictions.</p>
-      <p>💰 EV Score: +18.7%</p>
-    </div>
+  <div class="section-header">Today’s Premium Picks</div>
 
-    <div class="prediction locked">
-      <h3>🔒 Premium Pick 3</h3>
-      <p>Subscribe to unlock elite AI predictions.</p>
-      <p>💰 EV Score: +22.1%</p>
-    </div>
+  <!-- AUTO-INSERTED PREMIUM MATCHES WILL APPEAR HERE -->
+</div>
+<!-- Premium Predictions End -->
 
     <div class="pricing">
       <button class="mpesa-btn" onclick="showMpesa('weekly')">📲 Pay Weekly: Ksh.150 via M-Pesa</button>
